# Kyte

./: .gitignore  Cargo.toml  GRAMMAR.md  LICENSE  README.md  build.rs  test_basic.ky  test_simple.ky
.github/workflows/: ci.yml  release.yml
editors/vscode/: extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: kyte.tmLanguage.json
examples/: hello.ky
examples/src/: main.ky  match_test.ky  new_features_test.ky
scripts/: setup.ps1  setup.sh
src/: analyzer.rs  ast.rs  codegen.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs
src/analyzer/: shared.rs
src/codegen/: ops.rs  runtime.rs
src/parser/: fstring.rs  toplevel.rs
test/: .gitignore  wind.toml
test/cases/fail/: 01_undeclared_var.ky  02_undeclared_fn.ky  03_type_mismatch.ky  04_parse_error.ky  05_decorator_signature.ky
test/cases/pass/: 01_basic_fn.ky  02_mod_match.ky  03_closure_fstring.ky  04_imports.ky  05_decorator_tests.ky  06_expected_values.ky  helpers.ky
test/src/: main.ky
