[package]
name = "kyte"
version = "0.1.0"
edition = "2021"
description = "The Kyte Programming Language — LLVM-powered with anchor-based supervision"
license = "Apache-2.0"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cc = "1"